--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
   "devDependencies": {
     "babel-preset-stage-2": "^6.17.0",
     "css-loader": "^0.25.0",
-    "style-loader": "^0.13.1",
-    "sass-loader": "^4.0.0",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.16.2"
   }
