--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.15.2",
     "bourbon": "^4.2.7",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "moment": "^2.14.1",
     "node-bourbon": "^4.2.8",
     "path": "^0.12.7",
