--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "body-parser": "^1.15.2",
     "bourbon": "^4.2.7",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
     "node-bourbon": "^4.2.8",
+    "nodemailer": "^2.7.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
