--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "./server/server.js",
   "scripts": {
-    "start": "NODE_ENV=development node ./server/server.js",
+    "start": "npm run build && npm run prod-node",
     "build": "webpack --verbose --colors --display-error-details --config webpack.config.prod.js",
     "prod-node": "NODE_ENV=production node .",
-    "postinstall": "npm run build && npm run prod-node",
+    "dev": "NODE_ENV=development node ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
