--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server/server.js",
   "scripts": {
     "start": "npm run build && npm run prod-node",
-    "build": "webpack --verbose --colors --display-error-details --config webpack.config.prod.js",
+    "build": "node ./node_modules/webpack/bin/webpack.js --verbose --colors --display-error-details --config webpack.config.prod.js",
     "prod-node": "NODE_ENV=production node .",
     "dev": "NODE_ENV=development node ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
