--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "mvp",
+  "name": "Nizar",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "v6.2.2"
+  },
+  "description": "Nizar Ayari Portfolio",
   "main": "./server/server.js",
   "scripts": {
     "start": "NODE_ENV=production node .",
