--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Nizar Ayari Portfolio",
   "main": "./server/server.js",
   "scripts": {
-    "start": "NODE_ENV=production node .",
+    "start": "NODE_ENV=production node ./server/server.js",
     "build": "webpack --verbose --colors --display-error-details --config webpack.config.prod.js",
     "prod-node": "NODE_ENV=production node .",
     "postinstall": "npm run build && npm run prod-node",
