--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-loader": "^2.4.0"
+    "react-loader": "^2.4.0",
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "babel-preset-stage-2": "^6.17.0",
@@ -43,7 +44,6 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.2"
