--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-dom": "^15.1.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-loader": "^2.4.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
     "babel-preset-stage-2": "^6.17.0",
@@ -44,8 +46,6 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.13.2"
+    "webpack-dev-server": "^1.16.2"
   }
 }
