--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "react-loader": "^2.4.0",
     "webpack": "^1.13.1",
     "webpack-hot-middleware": "^2.13.2",
-    "webpack-dev-middleware": "^1.9.0"
-  },
-  "devDependencies": {
+    "webpack-dev-middleware": "^1.9.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+  },
+  "devDependencies": {
     "webpack-dev-server": "^1.16.2"  
   }
 }
