[feature]send email via aws ses

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+accessKeyId=9+mLmMuYo5o0Tf+9AeqAazQLRH5HG3HnicmeGl+h
+secretAccessKey=AKIAI74XHDJDSPZF2ASA
 user=chemayalimo@gmail.com
-password=newlifesf
