--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.1.1",
     "node-bourbon": "^4.2.8",
     "nodemailer": "^2.7.0",
+    "nodemailer-ses-transport": "^1.5.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
